--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <frameset rows="17%, *">
-	<frame name="frame-menu" src="page/Menu.html">
-	<frame name="frame-content" src="page/Tribute Sample.html">
+	<frame name="frame-menu" src="page/menu.html">
+	<frame name="frame-content" src="page/menu.html">
 </frameset>
 </html>
