--- a/Gallery/Gallery.html
+++ b/Gallery/Gallery.html
@@ -17,7 +17,7 @@
 	- NICDAO, PENNY
 	- PILAPIL, JERMAIN
 	- BALANDRA, ALVIN JAMES
-	(CREATED BY Nicdao,Penny) 
+	(CREATED BY Bello,Billy Jay) 
 	-->
 
 </head>
