--- a/Gallery/menu.html
+++ b/Gallery/menu.html
@@ -7,6 +7,17 @@
 	<link rel="stylesheet" type="text/css" href="text.css">
 
 
+    <!--
+    GROUP #7
+    - BELLO, BILLY JAY
+    - ORENDAIN, REYMARK
+    - NICDAO, PENNY
+    - PILAPIL, JERMAIN
+    - BALANDRA, ALVIN JAMES
+    (CREATED BY Nicdao,Penny) 
+    -->
+
+
 
   <header>
  <h1>GROUP<span>7</span></h1>
