--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 
 <frameset rows="17%, *">
 	<frame name="frame-menu" src="page/menu.html">
-	<frame name="frame-content" src="page/menu.html">
+	<frame name="frame-content" src="page/Tribute.html">
 </frameset>
 </html>
