--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title>Group 7</title>
 </head>
 
-<frameset rows="17%, *">
+<frameset rows="11%, *">
 	<frame name="frame-menu" src="page/menu.html">
-	<frame name="frame-content" src="page/Tribute.html">
+	<frame name="frame-content" src="page/menu.html">
 </frameset>
 </html>
